
Sat Oct  2 17:25:12 PDT 1999
(Raster)

several patches (group break if members of group of screen patch plue some
xmms behavior patches)
:)

-------------------------------------------------------------------------------

Sat Oct  2 17:27:31 PDT 1999
(Raster)


add dialog to explain pagers and iconboxes arent part of a group... :)

-------------------------------------------------------------------------------

Sat Oct  2 17:28:58 PDT 1999
(Raster)

damn.. fix that \" :)

-------------------------------------------------------------------------------

Sat Oct  2 18:04:57 PDT 1999
(Raster)

fix "saying no to logout dialog stops windows form being de-iconified"

-------------------------------------------------------------------------------

Sat Oct  2 18:08:37 PDT 1999
(Raster)

get rid of warning

-------------------------------------------------------------------------------

Sat Oct  2 18:11:31 PDT 1999
(Raster)

rtemove reply from ipc iclass apply - more efficient - this WILL break eterm
automode (well it will braak eterm) until eterm is updated :)
sorry kainx  :)

-------------------------------------------------------------------------------

Sat Oct  2 18:59:21 PDT 1999
(Raster)

needed to fix the iclass ipc stuff a bit to make it more useful in the long
run

-------------------------------------------------------------------------------

Sat Oct  2 20:45:20 PDT 1999
(Raster)

chaneg menu entry name, fix some bits of the ipcs and remove useless \n's in
ipc returns...

-------------------------------------------------------------------------------

Sat Oct  2 21:20:50 PDT 1999
(Raster)

add $EBIN as env variable.. need for scripts.. :)

-------------------------------------------------------------------------------

Sun Oct  3 00:45:11 PDT 1999
(Raster)

get textclas ipc right....

-------------------------------------------------------------------------------

Sun Oct  3 01:11:42 PDT 1999
(Raster)

and save snapsh when the ipc is called....